--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build
         run: |
-          npm i --legacy-peer-deps
+          npm install
           npm run build
           npm run export
       - name: Deploy
