--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,45 +1,32 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
+name: Deploy to Github Pages
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
+
+  workflow_dispatch:
 
 jobs:
-  build:
-
+  deployment:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-      
+      - uses: actions/checkout@v3
 
-    - name: Installing my packages
-      run: npm ci
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+          cache: "npm"
 
-    - name: Build my App  
-      run: npm run build
-      env:
-        NEXT_PUBLIC_BASE_PATH: /venarus
-    - run: npm run export
-      env:
-        NEXT_PUBLIC_BASE_PATH: /venarus
-    - run: touch ./out/.nojekyll
-    
-    - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@3.5.9
-      with:
-         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-         publish_dir: ./out
+      - name: Build
+        run: |
+          npm i --legacy-peer-deps
+          npm run build
+          npm run export
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./out
